--- a/network/wire-guard/reresolve-dns.service
+++ b/network/wire-guard/reresolve-dns.service
@@ -5,5 +5,5 @@ After=network-online.target
 
 [Service]
 Type=oneshot
-RemainAfterExit=false
+RemainAfterExit=yes
 ExecStart=/bin/bash -e /etc/wireguard/reload-script.sh
