--- a/network/sshfs/sftp-server.service
+++ b/network/sshfs/sftp-server.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=OpenSSH SFTP daemon
 Documentation=man:sftp(1)
-After=network.target ssh.service
-Wants=ssh.service
+After=network.target sshd.service
+Wants=sshd.service
 
 [Service]
 Type=simple
@@ -10,6 +10,7 @@ ExecStart=/usr/bin/ncat -kl 21 --exec "/usr/libexec/openssh/sftp-server"
 KillMode=process
 Restart=always
 RestartSec=10s
+TimeoutStopSec=20s
 
 [Install]
 WantedBy=multi-user.target
